# home_expense_tracker

./: MANIFEST.in  README.md  pyproject.toml  spending.db
expense_tracker/: database.py  implementation_plan.md  main.py  models.py  run.py  schemas.py  spending.db
expense_tracker/static/: index.html
expense_tracker/static/css/: style.css
expense_tracker/static/js/: app.js
home_expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
static/css/: style.css
static/js/: app.js
