[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-expense-tracker"
version = "0.1.0"
description = "A simple household expense tracker using FastAPI"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
]
requires-python = ">=3.8"

[project.scripts]
expense-tracker = "expense_tracker.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["expense_tracker*"]